--- a/public/scripts/extensions/expressions/manifest.json
+++ b/public/scripts/extensions/expressions/manifest.json
@@ -1,13 +1,11 @@
 {
-    "display_name": "Character Expressions",
-    "loading_order": 6,
+    "display_name": "Deal Status",
+    "loading_order": 20,
     "requires": [],
-    "optional": [
-        "classify"
-    ],
+    "optional": [],
     "js": "index.js",
     "css": "style.css",
-    "author": "Cohee#1207",
+    "author": "TA",
     "version": "1.0.0",
     "homePage": "https://github.com/SillyTavern/SillyTavern"
 }
